Fix roundabout bug in a way that doesnt create portals